[gd_scene load_steps=28 format=3 uid="uid://b3klo0a4hc6ed"]

[ext_resource type="Theme" uid="uid://bt3vq2xxetwgb" path="res://theme/theme.tres" id="1_47nge"]
[ext_resource type="PackedScene" uid="uid://yrrfmbliq41n" path="res://players/mirror_player.tscn" id="2_e1yyq"]
[ext_resource type="Script" path="res://ui/main_menu.gd" id="2_nplhe"]
[ext_resource type="PackedScene" uid="uid://bf1y1a0oplbs1" path="res://players/projector_player.tscn" id="3_6b666"]
[ext_resource type="Script" path="res://addons/controller_icons/objects/ControllerIconTexture.gd" id="3_tvjic"]
[ext_resource type="PackedScene" uid="uid://dq64kjqwly66a" path="res://maps/projector.tscn" id="6_jtdae"]
[ext_resource type="PackedScene" uid="uid://c7g2oxwiwgakd" path="res://maps/core.tscn" id="7_do7aw"]
[ext_resource type="PackedScene" uid="uid://cbcrqsogtxevg" path="res://enemies/vampire.tscn" id="8_p8u5f"]

[sub_resource type="Gradient" id="Gradient_ne3sf"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.184314, 0.054902, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_52684"]
gradient = SubResource("Gradient_ne3sf")
width = 1980
height = 1080

[sub_resource type="Texture2D" id="Texture2D_qcsis"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "mirror.move.rotate.left"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_h45e0"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "mirror.move.up"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_au6ha"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "mirror.move.rotate.right"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_lq8wl"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "mirror.move.left"
show_mode = 1
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_811dj"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "mirror.move.down"
show_mode = 1
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_5c21c"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "mirror.move.right"
show_mode = 1
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_nj7q0"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.pan.left"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_5an7m"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.move.up"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_xdell"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.pan.right"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_06861"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.move.left"
show_mode = 1
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_x48vx"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.move.down"
show_mode = 1
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_acsir"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.move.right"
show_mode = 1
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_i5f54"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.toggle"
show_mode = 0
force_type = 0

[sub_resource type="Texture2D" id="Texture2D_dar5l"]
resource_local_to_scene = false
resource_name = ""
script = ExtResource("3_tvjic")
path = "projector.repair"
show_mode = 0
force_type = 0

[sub_resource type="Animation" id="Animation_tfcri"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Projector2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_veiw5"]
resource_name = "projector_pulsate"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Projector2:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tplxi"]
_data = {
"RESET": SubResource("Animation_tfcri"),
"projector_pulsate": SubResource("Animation_veiw5")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_47nge")
script = ExtResource("2_nplhe")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(-30, 0)
texture = SubResource("GradientTexture2D_52684")
centered = false
metadata/_edit_group_ = true

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 263.0
grow_horizontal = 2
theme_type_variation = &"TitleLabel"
text = "HELL OF MIRRORS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -495.0
offset_top = 166.0
offset_right = 495.0
offset_bottom = 240.0
grow_horizontal = 2
bbcode_enabled = true
text = "[center][font_size=38]Arena, [font_size=36]Cooperation, [font_size=34]2 players, [font_size=32]vampires, [font_size=30]zombies, [font_size=28]free to play, [font_size=26]chill, [font_size=24]hardcore, [font_size=22]cry, [font_size=20]Godot"

[node name="Fullscreen" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -271.0
offset_top = 55.0
offset_right = -57.0
offset_bottom = 127.0
grow_horizontal = 0
text = "Fullscreen (F10)"

[node name="FixMeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 980.0
offset_top = 394.0
offset_right = 1241.0
offset_bottom = 447.0
theme_type_variation = &"LargeLabel"
text = "1. FIX ME!"
horizontal_alignment = 1

[node name="ReflectMeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 394.0
offset_right = 830.0
offset_bottom = 447.0
theme_type_variation = &"LargeLabel"
text = "2. REFLECT ME!"
horizontal_alignment = 1

[node name="ChargeMeLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 830.0
offset_top = 883.0
offset_right = 1091.0
offset_bottom = 936.0
theme_type_variation = &"LargeLabel"
text = "3. CHARGE ME!"
horizontal_alignment = 1

[node name="MirrorPlayer" parent="." instance=ExtResource("2_e1yyq")]
position = Vector2(397, 579)

[node name="Control" type="Control" parent="MirrorPlayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_47nge")

[node name="Label" type="Label" parent="MirrorPlayer/Control"]
layout_mode = 0
offset_left = -60.0
offset_top = -100.0
offset_right = 69.0
offset_bottom = -25.0
theme_type_variation = &"MirrorPlayerLabel"
text = "Player 1"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="MirrorPlayer/Control"]
layout_mode = 0
offset_left = -154.0
offset_top = -302.0
offset_right = 154.0
offset_bottom = -98.0
columns = 3

[node name="Button3" type="TextureRect" parent="MirrorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_qcsis")

[node name="Label" type="Label" parent="MirrorPlayer/Control/GridContainer/Button3"]
layout_mode = 0
offset_left = -87.0
offset_top = -47.0
offset_right = 50.0
offset_bottom = 52.0
text = "Tilt mirror left"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button2" type="TextureRect" parent="MirrorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_h45e0")

[node name="Button5" type="TextureRect" parent="MirrorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_au6ha")

[node name="Label" type="Label" parent="MirrorPlayer/Control/GridContainer/Button5"]
layout_mode = 0
offset_left = 53.0
offset_top = -48.0
offset_right = 202.0
offset_bottom = 20.0
text = "Tilt mirror right"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button4" type="TextureRect" parent="MirrorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_lq8wl")

[node name="Button1" type="TextureRect" parent="MirrorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_811dj")

[node name="Button6" type="TextureRect" parent="MirrorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_5c21c")

[node name="ProjectorPlayer" parent="." instance=ExtResource("3_6b666")]
position = Vector2(1461, 715)

[node name="Control" type="Control" parent="ProjectorPlayer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_47nge")

[node name="Label" type="Label" parent="ProjectorPlayer/Control"]
layout_mode = 0
offset_left = -59.0
offset_top = -103.0
offset_right = 70.0
offset_bottom = -28.0
theme_type_variation = &"ProjectorPlayerLabel"
text = "Player 2"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="ProjectorPlayer/Control"]
layout_mode = 0
offset_left = -154.0
offset_top = -300.0
offset_right = 154.0
offset_bottom = -96.0
columns = 3

[node name="Button3" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_nj7q0")

[node name="Label" type="Label" parent="ProjectorPlayer/Control/GridContainer/Button3"]
layout_mode = 0
offset_left = -91.0
offset_top = -39.0
offset_right = 76.0
offset_bottom = 63.0
text = "Pan projector left"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button2" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_5an7m")

[node name="Button5" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_xdell")

[node name="Label" type="Label" parent="ProjectorPlayer/Control/GridContainer/Button5"]
layout_mode = 0
offset_left = 46.0
offset_top = -38.0
offset_right = 221.0
offset_bottom = 34.0
text = "Pan projector right"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button4" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_06861")

[node name="Button1" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_x48vx")

[node name="Button6" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer"]
layout_mode = 2
texture = SubResource("Texture2D_acsir")

[node name="GridContainer2" type="GridContainer" parent="ProjectorPlayer/Control"]
layout_mode = 0
offset_left = -100.0
offset_top = 80.0
offset_right = 104.0
offset_bottom = 180.0
columns = 2

[node name="Button1" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer2"]
layout_mode = 2
texture = SubResource("Texture2D_i5f54")

[node name="Label" type="Label" parent="ProjectorPlayer/Control/GridContainer2/Button1"]
layout_mode = 0
offset_left = -174.0
offset_top = 19.0
offset_right = 22.0
offset_bottom = 86.0
text = "Toggle projector on/off"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button2" type="TextureRect" parent="ProjectorPlayer/Control/GridContainer2"]
layout_mode = 2
texture = SubResource("Texture2D_dar5l")

[node name="Label" type="Label" parent="ProjectorPlayer/Control/GridContainer2/Button2"]
layout_mode = 0
offset_left = 85.0
offset_top = 38.0
offset_right = 281.0
offset_bottom = 70.0
text = "Repair projector"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Projector" parent="." instance=ExtResource("6_jtdae")]
position = Vector2(177, 909)
rotation = -2.53073
randomised = false
light_on = true
hp = 100.0

[node name="Projector2" parent="." instance=ExtResource("6_jtdae")]
position = Vector2(1112, 522)
rotation = -3.529
randomised = false
hp = 50.0
broken = true

[node name="Core" parent="." instance=ExtResource("7_do7aw")]
position = Vector2(960, 777)
max_charge = 300
charge = 150.0

[node name="Vampire" parent="." instance=ExtResource("8_p8u5f")]
position = Vector2(485, 817)
damage = 5.0
regen = 2.08165e-12

[node name="Vampire2" parent="." node_paths=PackedStringArray("target") instance=ExtResource("8_p8u5f")]
position = Vector2(743, 611)
damage = 5.0
regen = 2.08165e-12
target = NodePath("../Core")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tplxi")
}

[connection signal="pressed" from="Fullscreen" to="." method="_on_fullscreen_pressed"]
[connection signal="charged" from="Core" to="." method="start_game"]
